2000-11-09  Bruno Haible  <haible@clisp.cons.org>

	* configure.in (ALL_LINGUAS): Add tr.

2000-08-23  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Invoke AC_C_BACKSLASH_A.

2000-07-29  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.am (EXTRA_DIST): Add aclocal.sh.

2000-07-28  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Postprocess misc/Makefile to workaround an automake
	bug.

2000-06-16  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.am: Put back the ACLOCAL_AMFLAGS definition, but define
	ACLOCAL as a wrapper around aclocal.
	* aclocal.sh: New file.

	* config.guess, config.sub: Update to GNU version 2000-06-13.
	* misc/locale.alias: Update to glibc CVS version 2000-06-13.

2000-05-06  Ulrich Drepper  <drepper@redhat.com>

	* Makefile.am: Comment out ACLOCAL_AMFLAGS definition.  The files
	come with automake and therefore the -I will cause redefinitions.

	* acconfig.h: Define HAVE_BASENAME if glibc is used.
			
1998-04-30 23:20  Ulrich Drepper  <drepper@cygnus.com>

	* configure.in: Remove commands in AC_OUTPUT.  Moved into
	AM_GNU_GETTEXT macro in m4/gettext.m4.

	* configure.in: Bump version number to 0.10.35.

1998-04-28 16:07  Ulrich Drepper  <drepper@cygnus.com>

	* configure.in: Bump version number to 0.10.34.
	Don't test for basename function.

1998-04-27 20:36  Ulrich Drepper  <drepper@cygnus.com>

	* Makefile.am (AUTOMAKE_OPTIONS): Require version 1.3.
	(ACLOCAL_AMFLAGS): New variable, set to -I m4.
	(aclocaldir): Definition removed.
	(gettextsrc_DATA): New variable, set to ABOUT_NLS.

	* configure.in: Bump version number to 0.10.33.
	Define INCLUDE_LOCALE_H in gettext.m4.  Remove AC_LINK_FILES line,
	can now be in gettext.m4.  Rewrite also m4/Makefile.

1997-09-06 01:11  Ulrich Drepper  <drepper@cygnus.com>

	* configure.in: Bump version number to 0.10.32.

1997-09-05 05:44  Ulrich Drepper  <drepper@cygnus.com>

	* configure.in (ALL_LINGUAS): Add da.

1997-08-21 15:02  Ulrich Drepper  <drepper@cygnus.com>
