@@ -28,9 +28,11 @@ dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
 AC_C_INLINE
 AC_C_BACKSLASH_A
+jm_AC_TYPE_UNSIGNED_LONG_LONG
 AC_TYPE_OFF_T
 AC_TYPE_SIZE_T
 AM_TYPE_PTRDIFF_T
+jm_AC_TYPE_UINTMAX_T
 
 dnl Checks for library functions.
 AC_FUNC_ALLOCA
