@@ -1,3 +1,10 @@
+2000-12-30  Bruno Haible  <haible@clisp.cons.org>
+
+	* ulonglong.m4: New file, from fileutils-4.0.32.
+	* inttypes_h.m4: Likewise.
+	* uintmax_t.m4: Likewise.
+	* Makefile.am (EXTRA_DIST): Add them.
+
 2000-09-14  Bruno Haible  <haible@clisp.cons.org>
 
 	* gettext.m4 (AM_WITH_NLS): Make the tests for gettext in libc and
